finished adding gamons

--- a/customerlist.html
+++ b/customerlist.html
@@ -334,10 +334,45 @@
             { customer: "JWJS", make: "Gamon", model: "Pac-15 UK 6", regPlate: "AY18 GWX", buildNumber: "070.09.27.18", deliveryDate: "to be updated" },
             { customer: "JWJS", make: "Gamon", model: "Pac-18 UK", regPlate: "FN68 VKX", buildNumber: "074.13.31.18", deliveryDate: "to be updated" },
             { customer: "to be updated", make: "Gamon", model: "Pac-10 UK", regPlate: "OE68 BEY", buildNumber: "071.10.28.15", deliveryDate: "to be updated" },
-
-            
-
-
+            { customer: "JWJS", make: "Gamon", model: "Pac-15 UK 8", regPlate: "FJ19 NAA", buildNumber: "079.18.41.18", deliveryDate: "to be updated" },
+            { customer: "McBreen Environmental", make: "Gamon", model: "Pac-18 UK", regPlate: "to be updated", buildNumber: "084.23.50.18", deliveryDate: "to be updated" },
+            { customer: "McBreen Environmental", make: "Gamon", model: "Pac-18 UK", regPlate: "to be updated", buildNumber: "000.00.00.01", deliveryDate: "to be updated" },
+            { customer: "Convertwater", make: "Gamon", model: "UK 14", regPlate: "FJ71 SUV", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "UK 11", regPlate: "FJ71 SHZ", buildNumber: "149.15.25.21", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "UK 12", regPlate: "FJ71 SJO", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "Gamon", model: "UK 13", regPlate: "FJ71 SRV", buildNumber: "153.19.30.21", deliveryDate: "to be updated" },
+            { customer: "Convertwater", make: "Gamon", model: "Gamvac", regPlate: "FJ21 UPC", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "McBreen Environmental", make: "Gamon", model: "Gamon", regPlate: "to be updated", buildNumber: "161.27.48.21", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "Gamon", model: "Gamvac Plus UK 16", regPlate: "FJ72 TCO", buildNumber: "190.32.48.22", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "Gamon", model: "Gamvac Plus UK 15", regPlate: "FJ23 SSK", buildNumber: "189.31.47.22", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 17", regPlate: "FJ23 SRX", buildNumber: "195.33.49.22", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 18", regPlate: "FJ23 SRY", buildNumber: "197.25.50.22", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "Gamon", model: "Gamvac Plus UK 19", regPlate: "FJ23 SRZ", buildNumber: "199.26.52.22", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 20", regPlate: "PN24 CTU", buildNumber: "253.13.15.24", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 21", regPlate: "PN24 COA", buildNumber: "254.14.16.24", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 22", regPlate: "PN24 CKP", buildNumber: "255.15.17.24", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 23", regPlate: "SG24 USC", buildNumber: "256.16.19.24", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 24", regPlate: "PN24 CTF", buildNumber: "257.17.20.24", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 25", regPlate: "FL74 RTU", buildNumber: "276.36.51.24", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 26", regPlate: "FL74 JPX", buildNumber: "277.37.51.24", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 27", regPlate: "FL74 JYK", buildNumber: "278.01.02.25", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 28", regPlate: "FL74 RSZ", buildNumber: "279.02.03.25", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 29", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 30", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 31", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 32", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 33", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 34", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 35", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 36", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 37", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 38", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 39", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Gamon", model: "Gamvac Plus UK 40", regPlate: "to be updated", buildNumber: "to be updated", deliveryDate: "to be updated" },
+            { customer: "Basement Pumps", make: "VJ Engineering", model: "4K Tanker", regPlate: "FN21 EXX", buildNumber: "VJE0383", deliveryDate: "to be updated" },
+            { customer: "McBreen Environmental", make: "VJ Engineering", model: "4K Tanker", regPlate: "FN21 ERV", buildNumber: "VJE0384", deliveryDate: "to be updated" },
+            { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "2K Tanker", regPlate: "LF29 OFA", buildNumber: "VJE0400", deliveryDate: "to be updated" },
+            { customer: "AA Turner Tankers", make: "VJ Engineering", model: "4K Tanker", regPlate: "FN71 BPX", buildNumber: "VJE0401", deliveryDate: "to be updated" },
         ];
 
         const tableBody = document.getElementById("truckTable");
