finished adding list for trucks

--- a/customerlist.html
+++ b/customerlist.html
@@ -373,6 +373,74 @@
             { customer: "McBreen Environmental", make: "VJ Engineering", model: "4K Tanker", regPlate: "FN21 ERV", buildNumber: "VJE0384", deliveryDate: "to be updated" },
             { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "2K Tanker", regPlate: "LF29 OFA", buildNumber: "VJE0400", deliveryDate: "to be updated" },
             { customer: "AA Turner Tankers", make: "VJ Engineering", model: "4K Tanker", regPlate: "FN71 BPX", buildNumber: "VJE0401", deliveryDate: "to be updated" },
+            { customer: "JWJS", make: "VJ Engineering", model: "4K Tanker", regPlate: "FJ71 BPY", buildNumber: "VJE0404", deliveryDate: "to be updated" },
+            { customer: "JWJS", make: "VJ Engineering", model: "4K Tanker", regPlate: "to be updated", buildNumber: "VJE0405", deliveryDate: "to be updated" },
+            { customer: "Drain Technology", make: "VJ Engineering", model: "4K Tanker", regPlate: "FJ71 SNF", buildNumber: "VJE0429", deliveryDate: "to be updated" },
+            { customer: "McBreen Environmental", make: "VJ Engineering", model: "4200 Gallon Vacuum Waste Tanker", regPlate: "FP71 OZR", buildNumber: "VJE0430", deliveryDate: "to be updated" },
+            { customer: "Taylors Industrial Services", make: "VJ Engineering", model: "4200 Gallon Non-Hazardous Vacuum Waste Tanker", regPlate: "FJ72 SVA", buildNumber: "VJE0433", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "VJ Engineering", model: "4200 Gallon Non-Hazardous Vacuum Waste Tanker", regPlate: "FJ72 SDZ", buildNumber: "VJE0434", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "VJ Engineering", model: "4200 Gallon Vacuum Waste Tanker", regPlate: "FE22 VKV", buildNumber: "VJE0436", deliveryDate: "to be updated" },
+            { customer: "JWJS", make: "VJ Engineering", model: "4200 Gallon Non-Hazardous Vacuum Waste Tanker", regPlate: "FJ72 SRU", buildNumber: "VJE0437", deliveryDate: "to be updated" },
+            { customer: "John Coakley", make: "VJ Engineering", model: "3K Tanker", regPlate: "231-KE-448", buildNumber: "VJE0438", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "VJ Engineering", model: "4200 Gallon Vacuum Waste Tanker", regPlate: "FE22 VKU", buildNumber: "VJE0440", deliveryDate: "to be updated" },
+            { customer: "Glanville Environmental", make: "VJ Engineering", model: "2200 Gallon Non-Hazardous Vacuum Waste Tanker", regPlate: "FN72 BHW", buildNumber: "VJE0473", deliveryDate: "to be updated" },
+            { customer: "Clare Drains", make: "VJ Engineering", model: "4200 Gallon Non-Hazardous Vacuum Waste Tanker", regPlate: "FL22 OFH", buildNumber: "VJE0476", deliveryDate: "to be updated" },
+            { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ23 SKU", buildNumber: "VJE0477", deliveryDate: "to be updated" },
+            { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ23 SKV", buildNumber: "VJE0487", deliveryDate: "to be updated" },
+            { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ23 SXR", buildNumber: "VJE0489", deliveryDate: "to be updated" },
+            { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ23 SXS", buildNumber: "VJE0491", deliveryDate: "to be updated" },
+            { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ23 SXT", buildNumber: "VJE0492", deliveryDate: "to be updated" },
+            { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ23 SXU", buildNumber: "VJE0506", deliveryDate: "to be updated" },
+            { customer: "Drainforce", make: "VJ Engineering", model: "2200 Gallon Vacuum Waste Tanker", regPlate: "FJ72 SUO", buildNumber: "VJE0507", deliveryDate: "to be updated" },
+            { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ23 SWK", buildNumber: "VJE0512", deliveryDate: "to be updated" },
+            { customer: "Adler & Allan Environmental", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ23 SWN", buildNumber: "VJE0518", deliveryDate: "to be updated" },
+            { customer: "AA Turner Tankers", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ73 PVN", buildNumber: "VJE0524", deliveryDate: "to be updated" },
+            { customer: "Tapthat Plumbers", make: "VJ Engineering", model: "2200 Gallon Tanker", regPlate: "PN73 KFF", buildNumber: "VJE0525", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ73 SVO", buildNumber: "VJE0530", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ73 SVP", buildNumber: "VJE0536", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "VJ Engineering", model: "2200 Gallon Tanker", regPlate: "PN73 KFG", buildNumber: "VJE0540", deliveryDate: "to be updated" },
+            { customer: "CES Evironmental Services", make: "VJ Engineering", model: "3000 Gallon Tanker", regPlate: "241-CE-544", buildNumber: "VJE0545", deliveryDate: "to be updated" },
+            { customer: "Prodrainage Tanker Services", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "PR07 ANK", buildNumber: "VJE0546", deliveryDate: "to be updated" },
+            { customer: "Glanville Environmental", make: "VJ Engineering", model: "3000 Gallon Tanker", regPlate: "PN73 JVE", buildNumber: "VJE0547", deliveryDate: "to be updated" },
+            { customer: "Elliot Environmental", make: "VJ Engineering", model: "3000 Gallon Tanker", regPlate: "PN73 JVF", buildNumber: "VJE0549", deliveryDate: "to be updated" },
+            { customer: "Bull Tankers", make: "VJ Engineering", model: "3000 Gallon Tanker", regPlate: "PN73 JVG", buildNumber: "VJE0550", deliveryDate: "to be updated" },
+            { customer: "Prodrainage Tanker Services", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "PO05 VAC", buildNumber: "VJE0553", deliveryDate: "to be updated" },
+            { customer: "Drain Technology", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FL73 RXT", buildNumber: "VJE0557", deliveryDate: "to be updated" },
+            { customer: "Ultraflow Drainage Maintenance Solutions", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "PL73 VFW", buildNumber: "VJE0558", deliveryDate: "to be updated" },
+            { customer: "Ultraflow Drainage Maintenance Solutions", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "PL73 VFX", buildNumber: "VJE0560", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "VJ Engineering", model: "2200 Gallon Tanker", regPlate: "PN24 CMK", buildNumber: "VJE0569", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "VJ Engineering", model: "4200 Gallon Tanker ADR - Volvo", regPlate: "SJ24 GUW", buildNumber: "VJE0576-1", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "VJ Engineering", model: "4200 Gallon Tanker ADR - Volvo", regPlate: "SJ24 GUX", buildNumber: "VJE0576-2", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "PN24 CPV", buildNumber: "VJE0572-1", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "PN24 CNV", buildNumber: "VJE0572-2", deliveryDate: "to be updated" },
+            { customer: "Denholm", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "PN24 JYX", buildNumber: "VJE0566", deliveryDate: "to be updated" },
+            { customer: "GC Pumps", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "HG24 LCM", buildNumber: "VJE0567", deliveryDate: "to be updated" },
+            { customer: "Denholm", make: "VJ Engineering", model: "ADR Tipper 4K Tanker - Volvo", regPlate: "SJ24 GUU", buildNumber: "VJE0576-3", deliveryDate: "to be updated" },
+            { customer: "Future Industrial", make: "VJ Engineering", model: "ADR Tipper 4K Tanker - Volvo", regPlate: "SJ24 GUO", buildNumber: "VJE0576-4", deliveryDate: "to be updated" },
+            { customer: "Endurance Vehicle Solutions", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FD24 WWB", buildNumber: "VJE0585", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ74 RYW", buildNumber: "VJE0586", deliveryDate: "to be updated" },
+            { customer: "Wessex Water", make: "VJ Engineering", model: "3000 Gallon - Wessex spec", regPlate: "GN74 XJB", buildNumber: "VJE0583", deliveryDate: "to be updated" },
+            { customer: "Peachy Services", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ74 RXK", buildNumber: "VJE0589-1", deliveryDate: "to be updated" },
+            { customer: "DH Drainage", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ74 RYG", buildNumber: "VJE0589-2", deliveryDate: "to be updated" },
+            { customer: "Billy Bowie", make: "VJ Engineering", model: "3000 Gallon Tanker", regPlate: "PN74 FZM", buildNumber: "VJE0590", deliveryDate: "to be updated" },
+            { customer: "Chesterdield Environmental", make: "VJ Engineering", model: "4200 Tanker - Chesterfield Spec", regPlate: "FJ74 SBZ", buildNumber: "VJE0591", deliveryDate: "to be updated" },
+            { customer: "Wessex Water", make: "VJ Engineering", model: "3000 Gallon - Wessex spec", regPlate: "to be updated", buildNumber: "VJE0603-1", deliveryDate: "to be updated" },
+            { customer: "Wessex Water", make: "VJ Engineering", model: "3000 Gallon - Wessex spec", regPlate: "to be updated", buildNumber: "VJE0603-2", deliveryDate: "to be updated" },
+            { customer: "Wessex Water", make: "VJ Engineering", model: "3000 Gallon - Wessex spec", regPlate: "to be updated", buildNumber: "VJE0603-3", deliveryDate: "to be updated" },
+            { customer: "Billy Bowie", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "to be updated", buildNumber: "VJE0592", deliveryDate: "to be updated" },
+            { customer: "Rescue Rod Ltd", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ74 RZP", buildNumber: "VJE0598", deliveryDate: "to be updated" },
+            { customer: "Avalon Waste Management", make: "VJ Engineering", model: "3000 Gallon Tanker", regPlate: "PN74 GYA", buildNumber: "VJE0604-1", deliveryDate: "to be updated" },
+            { customer: "Billy Bowie", make: "VJ Engineering", model: "3000 Gallon Tanker", regPlate: "to be updated", buildNumber: "VJE0604-2", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ74 RVC", buildNumber: "VJE0605-1", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "FJ74 RVV", buildNumber: "VJE0605-2", deliveryDate: "to be updated" },
+            { customer: "Billy Bowie", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "to be updated", buildNumber: "VJE0597", deliveryDate: "to be updated" },
+            { customer: "Endurance Vehicle Solutions", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "to be updated", buildNumber: "VJE0618", deliveryDate: "to be updated" },
+            { customer: "Billy Bowie", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "to be updated", buildNumber: "VJE0619", deliveryDate: "to be updated" },
+            { customer: "Billy Bowie", make: "VJ Engineering", model: "3000 Gallon Tanker", regPlate: "to be updated", buildNumber: "VJE0616", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "to be updated", buildNumber: "VJE0622-1", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "to be updated", buildNumber: "VJE0622-2", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "VJ Engineering", model: "to be updated", regPlate: "to be updated", buildNumber: "VJE0625", deliveryDate: "to be updated" },
+            { customer: "Billy Bowie", make: "VJ Engineering", model: "4200 Gallon Tanker", regPlate: "to be updated", buildNumber: "VJE0606", deliveryDate: "to be updated" },
         ];
 
         const tableBody = document.getElementById("truckTable");
