--- a/us.html
+++ b/us.html
@@ -18,7 +18,7 @@
     <header>
         <section class="top-nav">
             <div>
-                <a href="index.html"><img src="assets/images/hllogo.png" id="logo"></a>
+                <a href="index.html"><img src="assets/images/roadlogo.png" id="logo"></a>
             </div>
             <input id="menu-toggle" type="checkbox" />
             <label class='menu-button-container' for="menu-toggle">
