--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     <a href="tel:+35350467507" target="_blank" rel="noopener" aria-label="Call us on 35350467507"><i class="fa-solid fa-phone"></i></a>
                 </li>
                 <li>
-                    <a href="" target="_blank" rel="noopener" aria-label="Visit our Facebook page (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/roadvacs/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="" target="_blank" rel="noopener" aria-label="Check out our Instagram page (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/roadvacsltd/" target="_blank" rel="noopener" aria-label="Check out our Instagram page (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
                 </li>
             </ul>
             <div id="copyright">
