adding social links

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                 <li>
                     <a href="https://www.instagram.com/roadvacsltd/" target="_blank" rel="noopener" aria-label="Check out our Instagram page (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
                 </li>
+                <li>
+                    <a href="https://www.linkedin.com/company/roadvacsltd/posts/?feedView=all" target="_blank" rel="noopener" aria-label="Check out our linkedin page (link opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a href="https://roadvacs.com/" target="_blank" rel="noopener" aria-label="Check out our web page (link opens in a new tab)"><i class="fa-regular fa-globe"></i></a>
+                </li>
             </ul>
             <div id="copyright">
                 <p>©2025 by Roadvacs Irl Ltd</p>
