--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="https://www.linkedin.com/company/roadvacsltd/posts/?feedView=all" target="_blank" rel="noopener" aria-label="Check out our linkedin page (link opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
                 </li>
                 <li>
-                    <a href="https://roadvacs.com/" target="_blank" rel="noopener" aria-label="Check out our web page (link opens in a new tab)"><i class="fa-regular fa-globe"></i></a>
+                    <a href="https://roadvacs.com/" target="_blank" rel="noopener" aria-label="Check out our web page (link opens in a new tab)"><i class="fa-solid fa-globe"></i></a>
                 </li>
             </ul>
             <div id="copyright">
