--- a/customerlist.html
+++ b/customerlist.html
@@ -125,16 +125,16 @@ Here's your updated `customerlist.html` file with the merged code for filtering 
         <div id="footer-content">
             <ul class="social-networks">
                 <li>
-                    <a href="tel:+35350467507" target="_blank" rel="noopener" aria-label="Call us on 35350467507"><i class="fa-solid fa-phone"></i></a>
+                    <a href="tel:35350467507" target="_blank" rel="noopeneer" aria-label="Call us on 35350467507"><i class="fa-solid fa-phone"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100071893128347" target="_blank" rel="noopener" aria-label="Visit our Facebook page (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="" target="_blank" rel="noopener" aria-label="Visit our facebook page (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/harrylaceywooddesign/" target="_blank" rel="noopener" aria-label="Check out our Instagram page (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="" target="_blank" rel="noopener" aria-label="Check out our instagram page (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://wa.me/353877699962" target="_blank" rel="noopener" aria-label="Contact us on WhatsApp (opens in a new tab)"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="" target="_blank" rel="noopener" aria-label="Contact us on whatsapp (opens in a new tab)"><i class="fa-brands fa-whatsapp"></i></a>
                 </li>
             </ul>
             <div id="copyright">
