saving new data

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <!-- CSS path connection -->
     <link rel="stylesheet" href="assets/css/style.css">
     <style>
-        #map { height: 600px; margin-bottom: 20px; }
+        #map { 
+            height: 600px; 
+            margin-bottom: 20px; 
+        }
     </style>
 </head>
 
@@ -37,8 +40,10 @@
             </ul>
         </section>
     </header>
+
     <!-- Integrated Map -->
     <div id="map"></div>
+
     <footer>
         <div id="footer-content">
             <ul class="social-networks">
@@ -63,12 +68,3 @@
             </div>
         </div>
     </footer>
-
-    <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="assets/js/script.js"></script>
-    <!-- Fontawesome -->
-    <script src="https://kit.fontawesome.com/feb4a38862.js" crossorigin="anonymous"></script>
-</body>
-</html>
-
