testing commit time

--- a/customerlist.html
+++ b/customerlist.html
@@ -172,7 +172,7 @@ Here's your updated `customerlist.html` file with the merged code for filtering 
         // Truck data for table
 const trucks = [
 { customer: "Meath Jetting Services", make: "Muller", model: "Canalmaster F150 E", regPlate: "04-MH-15490", buildNumber: "10401600", deliveryDate: "to be updated" },
-            { customer: "Enva", make: "Muller", model: "Canalmaster F180 rec type I", regPlate: "to be updated", buildNumber: "10040500", deliveryDate: "to be updated" },
+            { customer: "Enva--", make: "Muller", model: "Canalmaster F180 rec type I", regPlate: "to be updated", buildNumber: "10040500", deliveryDate: "to be updated" },
             { customer: "Clearwater", make: "Muller", model: "Canalmaster F200 rec. type II", regPlate: "SF15CJU", buildNumber: "11443500", deliveryDate: "to be updated" },
             { customer: "Clearwater", make: "Muller", model: "Canalmaster F200 rec. type II", regPlate: "SF15CJU", buildNumber: "11443500", deliveryDate: "to be updated" },
             { customer: "McBreen Environmental", make: "Muller", model: "Canalmaster F130 E", regPlate: "151-CN-308", buildNumber: "11442300", deliveryDate: "to be updated" },
