--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                     <li> <a href="https://www.instagram.com/harrylaceywooddesign/" target="_blank" rel="noopener" aria-label="Check out our Instagram page (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a> </li>
                     <li> <a href="https://wa.me/353877699962" target="_blank" rel="noopener" aria-label="Contact us on WhatsApp (opens in a new tab)"><i class="fa-brands fa-whatsapp"></i></a> </li>
                 </ul>
-                <div id="copyright"> <p>©2025 by Roadvacs Irl Ltd</p> </div>
+                <div id="copywrite">
+                    <p>©2025 by Roadvacs Irl Ltd</p>
+                </div>
             </div>
         </footer>
 </script> </body> </html>
