--- a/Lanes.html
+++ b/Lanes.html
@@ -43,19 +43,16 @@
         <div id="footer-content">
             <ul class="social-networks">
                 <li>
-                    <a href="tel:+35350467507" target="_blank" rel="noopener" aria-label="Call us on 050467507"><i class="fa-solid fa-phone"></i></a>
+                    <a href="tel:+353877699962" target="_blank" rel="noopener" aria-label="Call us on 0877699962"><i class="fa-solid fa-phone"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/roadvacs/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100071893128347" target="_blank" rel="noopener" aria-label="Visit our Facebook page (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/roadvacsltd/" target="_blank" rel="noopener" aria-label="Check out our Instagram page (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/harrylaceywooddesign/" target="_blank" rel="noopener" aria-label="Check out our Instagram page (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/company/roadvacsltd/posts/?feedView=all" target="_blank" rel="noopener" aria-label="Contact us on linkedin (opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
-                </li>
-                <li>
-                    <a href="https://roadvacs.com/" target="_blank" rel="noopener" aria-label="Check our website (opens in a new tab)"><i class="fa-solid fa-globe"></i></a>
+                    <a href="https://wa.me/353877699962" target="_blank" rel="noopener" aria-label="Contact us on WhatsApp (opens in a new tab)"><i class="fa-brands fa-whatsapp"></i></a>
                 </li>
             </ul>
             <div id="copyright">
@@ -73,4 +70,3 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
-
