--- a/customerlist.html
+++ b/customerlist.html
@@ -165,8 +165,7 @@ Here's your updated `customerlist.html` file with the merged code for filtering 
                      <a href="https://roadvacs.com/" target="_blank" rel="noopener" aria-label="Check our website (opens in a new tab)"><i class="fa-solid fa-globe"></i></a>
                 </li>
             </ul>
-            
-            <div id="copyright">
+            <div id="copywrite">
                 <p>©2025 by Roadvacs Irl Ltd</p>
             </div>
         </div>
