testing sorting out

--- a/customerlist.html
+++ b/customerlist.html
@@ -1,7 +1,3 @@
-Here's your updated `customerlist.html` file with the merged code for filtering the table based on the customer name passed via the query parameter.
-
-### Updated Code:
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -86,7 +82,7 @@ Here's your updated `customerlist.html` file with the merged code for filtering 
 
         
         <!-- Sorting dropdown -->
-        <div>
+        <!--<div>
             <label for="sortOptions">Sort By:</label>
             <select id="sortOptions" onchange="handleSort()">
                 <option value="customer-asc">Customer (A-Z)</option>
@@ -101,7 +97,7 @@ Here's your updated `customerlist.html` file with the merged code for filtering 
                 <option value="buildNumber-desc">Build Number (Descending)</option>
 
             </select>
-        </div>
+        </div>-->
 
         <!-- Truck table -->
         <table>
