--- a/customerlist.html
+++ b/customerlist.html
@@ -15,7 +15,7 @@
     <!-- CSS path connection -->
     <link rel="stylesheet" href="assets/css/style.css">
     
-    <style>
+    <!--<style>
         table {
             width: 100%;
             border-collapse: collapse;
@@ -43,7 +43,7 @@
         button:hover {
             background-color: #45a049;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
