--- a/customerlist.html
+++ b/customerlist.html
@@ -15,7 +15,7 @@
     <!-- CSS path connection -->
     <link rel="stylesheet" href="assets/css/style.css">
     
-    <!--<style>
+    <style>
         table {
             width: 100%;
             border-collapse: collapse;
@@ -32,18 +32,7 @@
         input {
             margin: 10px;
         }
-        button {
-            margin: 5px;
-            padding: 8px 15px;
-            border: none;
-            background-color: #4CAF50;
-            color: white;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style> -->
+    </style>
 </head>
 
 <body>
