adding new features on filtering

--- a/customerlist.html
+++ b/customerlist.html
@@ -73,6 +73,9 @@
         <label for="makeFilter">Filter by Make:</label>
         <input type="text" id="makeFilter" oninput="filterTable()" placeholder="Enter make">
 
+        <label for="modelFilter">Filter by Model:</label>
+        <input type="text" id="modelFilter" oninput="filterTable()" placeholder="Enter model">        
+
         <label for="yearFilter">Filter by Year:</label>
         <input type="text" id="yearFilter" oninput="filterTable()" placeholder="Enter year">
 
