adding new features

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="menu">
                 <li class="list"><a href="index.html" class="actual">MAP</a></li>
                 <li class="list"><a href="customerlist.html">CUSTOMER LIST</a></li>
-                <li class="list"><a href="contactus.html">CONTACT</a></li>
+                <li class="list"><a href="us.html">CONTACT</a></li>
             </ul>
         </section>
     </header>
