--- a/customerlist.html
+++ b/customerlist.html
@@ -45,20 +45,19 @@
         }
     </style>
 </head>
-<body>
-    <header>
+<body><header>
         <section class="top-nav">
             <div>
                 <a href="index.html"><img src="assets/images/roadlogo.png" id="logo" alt="Roadvacs Logo"></a>
             </div>
-            <input id="menu-toggle" type="checkbox" />
+            <input id="menu-toggle" type="checkbox"/>
             <label class='menu-button-container' for="menu-toggle">
                 <div class='menu-button'></div>
             </label>
             <ul class="menu">
-                <li><a href="index.html">MAP</a></li>
-                <li><a href="customerlist.html" class="actual">CUSTOMER LIST</a></li>
-                <li><a href="us.html">CONTACT</a></li>
+                <li class="list"><a href="index.html">MAP</a></li>
+                <li class="list"><a href="customerlist.html" class="actual">CUSTOMER LIST</a></li>
+                <li class="list"><a href="us.html">CONTACT</a></li>
             </ul>
         </section>
     </header>
